src/harmony/Dropdown/Dropdown.module.css
.DropdownTrigger {
    display: flex;
    justify-content: center;
    flex-direction: column;
    gap: 0.125rem;

    padding-left: var(--gap-xs);
    padding-right: var(--gap-s);

    width: 100%;
    min-height: var(--gap-l);
    box-sizing: border-box;

    border: 1px solid transparent;
    border-radius: var(--radius-m);

    transition: var(--transition-time) var(--transition-func);
    transition-property: color, background-color, border-color;

    user-select: none;
}

.DropdownTriggerWithLabel {
    height: 50px;
    padding-top: var(--gap-xs);
    padding-bottom: var(--gap-xs);
}

.DropdownTrigger:focus {
    outline: none;
}

.DropdownTrigger:hover {
    cursor: pointer;
}

.DropdownTrigger:focus-visible {
    outline: 2px solid var(--gray-500);
}

.DropdownTrigger_view_default:hover {
    background-color: var(--base-hover);
}

.DropdownTrigger_view_default:active,
.DropdownTrigger_view_default.DropdownTrigger_active {
    background-color: var(--button-secondary-active);
}

.DropdownTrigger_view_outline {
    border-color: var(--gray-800);
}

.DropdownTrigger_view_outline:hover {
    border-color: var(--gray-700);
}

.DropdownTrigger_view_outline:active,
.DropdownTrigger_view_outline.DropdownTrigger_active {
    border-color: var(--gray-600);
}

.DropdownTrigger_view_fill {
    background-color: var(--button-secondary);
}

.DropdownTrigger_view_fill:hover {
    background-color: var(--button-secondary-hover);
}

.DropdownTrigger_view_fill:active,
.DropdownTrigger_view_fill.DropdownTrigger_active {
    background-color: var(--button-secondary-active);
}

.DropdownTrigger_disabled,
.DropdownTrigger_disabled:hover,
.DropdownTrigger_disabled:active {
    color: var(--text-ghost);
    cursor: not-allowed;
}

.DropdownTrigger_view_default.DropdownTrigger_disabled {
    background-color: transparent;
}

.DropdownTrigger_view_outline.DropdownTrigger_disabled {
    border-color: var(--base-hover);
}

.DropdownTrigger_view_fill.DropdownTrigger_disabled {
    background-color: var(--button-secondary);
}

.DropdownTrigger_readOnly,
.DropdownTrigger_readOnly:hover,
.DropdownTrigger_readOnly:active {
    color: var(--text-secondary);
    cursor: default;
}

.DropdownTrigger_view_default.DropdownTrigger_readOnly {
    background-color: transparent;
}

.DropdownTrigger_view_outline.DropdownTrigger_readOnly {
    border-color: var(--base-hover);
}

.DropdownTrigger_view_fill.DropdownTrigger_readOnly {
    background-color: var(--button-secondary);
}

.DropdownTriggerLabel {
    width: 100%;
    padding: 0 var(--gap-s);
    box-sizing: border-box;
    color: var(--text-ghost);
}

.DropdownTrigger_view_fill .DropdownTriggerLabel {
    color: var(--text-secondary);
}

.DropdownTriggerValueWrapper {
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex: 1;
}

.DropdownTriggerValue {
    width: 100%;
    padding: 0 var(--gap-s);
    box-sizing: border-box;
}

.DropdownTriggerValue_interactive {
    /* 100% - width of icon size xs */
    max-width: calc(100% - var(--gap-m));
    padding-right: 0;
}

.DropdownPanel {
    box-sizing: border-box;
}

.DropdownTrigger_error,
.DropdownTrigger_error:hover,
.DropdownTrigger_error:active {
    background-color: var(--danger-900);
    color: var(--danger-400);
}

.DropdownTrigger_error_outline {
    border-color: var(--danger-500);
}

.DropdownTriggerLabel_error {
    color: var(--danger-600);
}

